Colaboratory を使用して作成しました

--- a/run_fix.ipynb
+++ b/run_fix.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNZFYlAivrHfOqNHXMp+hlV",
+      "authorship_tag": "ABX9TyOY98NFyDBVbJLYfuIp6bEC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,10 +39,6 @@
         "    let arr = Array.new(n, true);\n",
         "    let arr = arr.set!(0, false);\n",
         "    let arr = arr.set!(1, false);\n",
-        "    // For usual loop, use `loop`, `continue` and `break`.\n",
-        "    // loop : s -> LoopResult s r -> r -- Takes the initial state and loop body.\n",
-        "    // continue : s -> LoopResult s r -- Take the next state and continues the loop.\n",
-        "    // break : r -> LoopResult s r -- Break the loop and `loop` returns the value given to `break`.\n",
         "    loop((2, arr), |(i, arr)|\n",
         "        if i*i > n { break $ arr };\n",
         "        let next_arr = (\n",
@@ -56,7 +52,7 @@
         "    )\n",
         ");\n",
         "\n",
-        "// Count the appearance of a value in an array.\n",
+        "// Count the number of occurrences of the value in an array.\n",
         "count : [a: Eq] a -> Array a -> Int;\n",
         "count = |elem, arr| (\n",
         "    loop((0, 0), |(i, sum)|\n",
@@ -67,8 +63,10 @@
         ");\n",
         "\n",
         "main : IOState -> ((), IOState);\n",
-        "main = println $ is_prime(10000000).count(true).to_string; // 664579\n",
-        "\n",
+        "main = |io| (\n",
+        "    let (_, io) = io.print(\"The number of primes under 10^7 is \");\n",
+        "    io.println(is_prime(10000000).count(true).to_string)\n",
+        ");\n",
         "'''\n",
         "\n",
         "# Run \"source\" as a fix program:\n",
@@ -79,7 +77,6 @@
         "\n",
         "file_list = !ls\n",
         "file_list = str(file_list)\n",
-        "\n",
         "if fix_binary_name not in file_list:\n",
         "   !wget https://github.com/tttmmmyyyy/fixlang/raw/main/prebuilt/x86_64-linux-ubuntu20.04/fix -O $fix_binary_name\n",
         "   !chmod u+x $fix_binary_name\n",
@@ -91,15 +88,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vysGXxLMtoS9",
-        "outputId": "6d3d7a3b-268b-466c-8cc0-12c5fbc48f6f"
+        "outputId": "f9520901-54de-477a-c40b-483fb55ea50d"
       },
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "664579\n"
+            "The number of primes under 10^7 is 664579\n"
           ]
         }
       ]
