--- a/run_fix.ipynb
+++ b/run_fix.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOY98NFyDBVbJLYfuIp6bEC",
+      "authorship_tag": "ABX9TyMWjN9/rgFDMgW/pUFXyRPs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +56,7 @@
         "count : [a: Eq] a -> Array a -> Int;\n",
         "count = |elem, arr| (\n",
         "    loop((0, 0), |(i, sum)|\n",
-        "        if arr.len == i { break $ sum };\n",
+        "        if arr.@length == i { break $ sum };\n",
         "        let sum = sum + (if arr.get(i) == elem {1} else {0});\n",
         "        continue $ (i+1, sum)\n",
         "    )\n",
@@ -64,8 +64,8 @@
         "\n",
         "main : IOState -> ((), IOState);\n",
         "main = |io| (\n",
-        "    let (_, io) = io.print(\"The number of primes under 10^7 is \");\n",
-        "    io.println(is_prime(10000000).count(true).to_string)\n",
+        "    let (_, io) = io.print!(\"The number of primes under 10^7 is \");\n",
+        "    io.println!(is_prime(10000000).count(true).to_string)\n",
         ");\n",
         "'''\n",
         "\n",
@@ -88,7 +88,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vysGXxLMtoS9",
-        "outputId": "f9520901-54de-477a-c40b-483fb55ea50d"
+        "outputId": "a1ec022b-5bf5-45c8-d0c6-fe5a895f0907"
       },
       "execution_count": 5,
       "outputs": [
