rename stdlib function

--- a/run_fix_1.ipynb
+++ b/run_fix_1.ipynb
@@ -56,7 +56,7 @@
         "count : [a: Eq] a -> Array a -> Int;\n",
         "count = |elem, arr| (\n",
         "    loop((0, 0), |(i, sum)|\n",
-        "        if arr.@length == i { break $ sum };\n",
+        "        if arr.get_length == i { break $ sum };\n",
         "        let sum = sum + (if arr.get(i) == elem {1} else {0});\n",
         "        continue $ (i+1, sum)\n",
         "    )\n",
