change name space separator from . to ::

--- a/run_fix_2.ipynb
+++ b/run_fix_2.ipynb
@@ -35,7 +35,7 @@
         "// Calculate a Bool array whose element is true iff idx is prime.\n",
         "is_prime : Int -> Array Bool;\n",
         "is_prime = |n| (\n",
-        "    let arr = Array.fill(n, true);\n",
+        "    let arr = Array::fill(n, true);\n",
         "    let arr = arr.set!(0, false);\n",
         "    let arr = arr.set!(1, false);\n",
         "    loop((2, arr), |(i, arr)|\n",
