change Int to I64

--- a/run_fix_2.ipynb
+++ b/run_fix_2.ipynb
@@ -33,7 +33,7 @@
         "module Main;\n",
         "\n",
         "// Calculate a Bool array whose element is true iff idx is prime.\n",
-        "is_prime : Int -> Array Bool;\n",
+        "is_prime : I64 -> Array Bool;\n",
         "is_prime = |n| (\n",
         "    let arr = Array::fill(n, true);\n",
         "    let arr = arr.set!(0, false);\n",
@@ -52,7 +52,7 @@
         ");\n",
         "\n",
         "// Count the number of occurrences of the value in an array.\n",
-        "count : [a: Eq] a -> Array a -> Int;\n",
+        "count : [a: Eq] a -> Array a -> I64;\n",
         "count = |elem, arr| (\n",
         "    loop((0, 0), |(i, sum)|\n",
         "        if arr.get_length == i { break $ sum };\n",
