--- a/run_fix_2.ipynb
+++ b/run_fix_2.ipynb
@@ -1,25 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/tttmmmyyyy/fixlang/blob/main/run_fix_2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -27,6 +12,39 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vysGXxLMtoS9",
+        "outputId": "3b4d13bf-093b-4039-9acf-7e689d334461"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "--2023-02-14 14:34:00--  https://github.com/tttmmmyyyy/fixlang_binary/raw/main/x86_64-linux-ubuntu20.04/fix\n",
+            "Resolving github.com (github.com)... 140.82.114.4\n",
+            "Connecting to github.com (github.com)|140.82.114.4|:443... connected.\n",
+            "HTTP request sent, awaiting response... 302 Found\n",
+            "Location: https://raw.githubusercontent.com/tttmmmyyyy/fixlang_binary/main/x86_64-linux-ubuntu20.04/fix [following]\n",
+            "--2023-02-14 14:34:01--  https://raw.githubusercontent.com/tttmmmyyyy/fixlang_binary/main/x86_64-linux-ubuntu20.04/fix\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 39859312 (38M) [application/octet-stream]\n",
+            "Saving to: ‘fix-prebuilt-binary’\n",
+            "\n",
+            "fix-prebuilt-binary 100%[===================>]  38.01M   186MB/s    in 0.2s    \n",
+            "\n",
+            "2023-02-14 14:34:03 (186 MB/s) - ‘fix-prebuilt-binary’ saved [39859312/39859312]\n",
+            "\n",
+            "The number of primes under 10^7 is 664579\n"
+          ]
+        }
+      ],
       "source": [
         "source = r'''\n",
         "\n",
@@ -61,10 +79,10 @@
         "    )\n",
         ");\n",
         "\n",
-        "main : IOState -> ((), IOState);\n",
-        "main = |io| (\n",
-        "    let (_, io) = io.print!(\"The number of primes under 10^7 is \");\n",
-        "    io.println!(is_prime(10000000).count(true).to_string)\n",
+        "main : IO ();\n",
+        "main = (\n",
+        "    let _ = *print(\"The number of primes under 10^7 is \");\n",
+        "    println(is_prime(10000000).count(true).to_string)\n",
         ");\n",
         "'''\n",
         "\n",
@@ -81,40 +99,23 @@
         "   !chmod u+x $fix_binary_name\n",
         "\n",
         "!./$fix_binary_name run $source_file_name"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "vysGXxLMtoS9",
-        "outputId": "3b4d13bf-093b-4039-9acf-7e689d334461"
-      },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "--2023-02-14 14:34:00--  https://github.com/tttmmmyyyy/fixlang_binary/raw/main/x86_64-linux-ubuntu20.04/fix\n",
-            "Resolving github.com (github.com)... 140.82.114.4\n",
-            "Connecting to github.com (github.com)|140.82.114.4|:443... connected.\n",
-            "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: https://raw.githubusercontent.com/tttmmmyyyy/fixlang_binary/main/x86_64-linux-ubuntu20.04/fix [following]\n",
-            "--2023-02-14 14:34:01--  https://raw.githubusercontent.com/tttmmmyyyy/fixlang_binary/main/x86_64-linux-ubuntu20.04/fix\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 39859312 (38M) [application/octet-stream]\n",
-            "Saving to: ‘fix-prebuilt-binary’\n",
-            "\n",
-            "fix-prebuilt-binary 100%[===================>]  38.01M   186MB/s    in 0.2s    \n",
-            "\n",
-            "2023-02-14 14:34:03 (186 MB/s) - ‘fix-prebuilt-binary’ saved [39859312/39859312]\n",
-            "\n",
-            "The number of primes under 10^7 is 664579\n"
-          ]
-        }
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.8.10"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
