--- a/run_fix_2.ipynb
+++ b/run_fix_2.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "colab_type": "text",
@@ -73,7 +74,7 @@
         "count : [a: Eq] a -> Array a -> I64;\n",
         "count = |elem, arr| (\n",
         "    loop((0, 0), |(i, sum)|\n",
-        "        if arr.get_length == i { break $ sum };\n",
+        "        if arr.get_size == i { break $ sum };\n",
         "        let sum = sum + (if arr.get(i) == elem {1} else {0});\n",
         "        continue $ (i+1, sum)\n",
         "    )\n",
