--- a/run_fix_2.ipynb
+++ b/run_fix_2.ipynb
@@ -99,7 +99,7 @@
         "   !wget https://github.com/tttmmmyyyy/fixlang_binary/raw/main/x86_64-linux-ubuntu20.04/fix -O $fix_binary_name\n",
         "   !chmod u+x $fix_binary_name\n",
         "\n",
-        "!./$fix_binary_name run $source_file_name"
+        "!./$fix_binary_name run --file $source_file_name"
       ]
     }
   ],
