change name of getter function of array element from `get` to `@`

--- a/run_fix_2.ipynb
+++ b/run_fix_2.ipynb
@@ -60,7 +60,7 @@
         "    loop((2, arr), |(i, arr)|\n",
         "        if i*i > n { break $ arr };\n",
         "        let next_arr = (\n",
-        "            if !arr.get(i) { arr };\n",
+        "            if !arr.@(i) { arr };\n",
         "            loop((i+i, arr), |(q, arr)|\n",
         "                if n-1 < q { break $ arr };\n",
         "                continue $ (q+i, arr.set!(q, false))\n",
@@ -75,7 +75,7 @@
         "count = |elem, arr| (\n",
         "    loop((0, 0), |(i, sum)|\n",
         "        if arr.get_size == i { break $ sum };\n",
-        "        let sum = sum + (if arr.get(i) == elem {1} else {0});\n",
+        "        let sum = sum + (if arr.@(i) == elem {1} else {0});\n",
         "        continue $ (i+1, sum)\n",
         "    )\n",
         ");\n",
