remove "assering uniquness" functions

--- a/run_fix_2.ipynb
+++ b/run_fix_2.ipynb
@@ -55,15 +55,15 @@
         "is_prime : I64 -> Array Bool;\n",
         "is_prime = |n| (\n",
         "    let arr = Array::fill(n, true);\n",
-        "    let arr = arr.set!(0, false);\n",
-        "    let arr = arr.set!(1, false);\n",
+        "    let arr = arr.set(0, false);\n",
+        "    let arr = arr.set(1, false);\n",
         "    loop((2, arr), |(i, arr)|\n",
         "        if i*i > n { break $ arr };\n",
         "        let next_arr = (\n",
         "            if !arr.@(i) { arr };\n",
         "            loop((i+i, arr), |(q, arr)|\n",
         "                if n-1 < q { break $ arr };\n",
-        "                continue $ (q+i, arr.set!(q, false))\n",
+        "                continue $ (q+i, arr.set(q, false))\n",
         "            )\n",
         "        );\n",
         "        continue $ (i+1, next_arr)\n",
