add `+` syntax, change eval semantics

--- a/run_fix_2.ipynb
+++ b/run_fix_2.ipynb
@@ -82,7 +82,7 @@
         "\n",
         "main : IO ();\n",
         "main = (\n",
-        "    eval *print(\"The number of primes under 10^7 is \");\n",
+        "    +print(\"The number of primes under 10^7 is \");\n",
         "    println(is_prime(10000000).count(true).to_string)\n",
         ");\n",
         "'''\n",
